# rust_tonic_grpc_bidi

./: Cargo.toml  README.md  build.rs
proto/: bidi_stream.proto
src/: perftest.rs  server.rs
