[package]
name = "rust_tonic_grpc_bidi"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Losev <losevmv@gmail.com>"]
license = "MIT"
publish = false

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "perftest"
path = "src/perftest.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"
rand = { version = "0.8", features = ["std_rng"]}
h2 = "0.4"

[build-dependencies]
tonic-build = "0.11"
