[package]
name = "rust_tonic_grpc_bidi"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Losev <losevmv@gmail.com>"]
license = "MIT"
publish = false

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "perftest"
path = "src/perftest.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
rand = { version = "0.9.0", features = ["std_rng"]}
h2 = "0.4.7"

[build-dependencies]
tonic-build = "0.12.3"
